# wcat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.rc
src/: help.h  main.c  wcat_main.cc
src/help/: help.h
src/parser/: parser.hh
