cmake_minimum_required(VERSION 3.0.0)
project(wcat)
add_link_options(-lm)
set(CMAKE_C_STANDARD 17)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_C_FLAGS "-Wall -Wextra")
set(CMAKE_C_FLAGS_DEBUG "-g")
set(CMAKE_C_FLAGS_RELEASE "-O3 -Og -Ofast -Os -s")
add_executable(wcat src/main.c)
